csdl/examples/invalid/ex_promotions_input_output.py
def example(Simulator):
    import csdl
    from csdl import Model, GraphRepresentation
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.subtraction import SubtractionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.subtraction import SubtractionFunction
    from csdl.examples.models.hierarchical import Hierarchical
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.subtraction import SubtractionVectorFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    
    
    class ErrorInputOutput(Model):
        # Can't promote a model containing inputs that are outputs in another model
        # Return error
    
        def define(self):
            # NOTE: Importing definitions within a method is bad practice.
            # This is only done here to automate example/test case
            # generation more easily.
            # When defining CSDL models, please put the import statements at
            # the top of your Python file(s).
            from csdl.examples.models.addition import AdditionFunction
            from csdl.examples.models.subtraction import SubtractionFunction
    
            a = self.create_input('a', val=3.0)
            d = self.create_input('a', val=3.0)
    
            self.add(SubtractionFunction(),
                     promotes=['d', 'c', 'f'],
                     name='model')
    
            # Promoting output model2.a will raise an error because it is already an input of model
            self.add(AdditionFunction(),
                     promotes=['a', 'b', 'f'],
                     name='model2')
    
    
    rep = GraphRepresentation(ErrorInputOutput())
    sim = Simulator(rep)
    sim.run()
    